--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,16 @@
 {
-  "name": "Cross Moita – 1RM & Diário",
-  "short_name": "1RM Diário",
-  "start_url": "./",
+  "name": "Cross Moita - 1RM & Diário",
+  "short_name": "CrossMoita",
+  "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#0f172a",
-  "theme_color": "#22c55e",
+  "background_color": "#111827",
+  "theme_color": "#111827",
   "icons": [
     {
       "src": "imagens/crossmoita_logo.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "imagens/crossmoita_logo.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     }
   ]
 }
